# grokking_experiments

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml  nanda_nobias.yaml  nanda_replication.yaml  sweep_depth.yaml  sweep_dhead_control.yaml  sweep_effective_wd.yaml  sweep_heads.yaml  sweep_heads_x_primes.yaml  sweep_learning_rate.yaml  sweep_multi_seed.yaml  sweep_operations.yaml  sweep_primes.yaml  sweep_train_fraction.yaml  sweep_weight_decay.yaml
dashboard/: app.py
docs/: analysis-pipeline.md  experiment_ideas.md  grokking-overview.md  heads_sweep_assessment.md  index.md  joint_sweep_results.md  quickstart.md  references.md  visualization-guide.md
scripts/: analyze_algebraic_structure.py  analyze_run.py  analyze_superposition.py  animate_depth_sweep.py  animate_effective_wd.py  animate_heads.py  animate_lr_sweep.py  animate_op_sweep.py  animate_primes.py  animate_tf_sweep.py  animate_wd_sweep.py  compare_circuits.py  compare_depth.py  compare_dhead.py  compare_effective_wd.py  compare_heads.py  compare_heads_x_primes.py  compare_learning_rate.py  compare_multi_seed.py  compare_operations.py  compare_primes.py  compare_train_fraction.py  compare_weight_decay.py  downsize_figures.py  generate_figures.py  run_sweep_depth.py  run_sweep_dhead.py  run_sweep_effective_wd.py  run_sweep_heads.py  run_sweep_heads_x_primes.py  run_sweep_learning_rate.py  run_sweep_multi_seed.py  run_sweep_operations.py  run_sweep_primes.py  run_sweep_train_fraction.py  run_sweep_weight_decay.py  train_single.py
src/: utils.py
tests/: test_data.py  test_fourier.py  (+3 more)
(+397 files in other folders)
